feat(proj): implement user and movies general methods
