# controllers/Movies.js
@@ -1,4 +1,8 @@
-export default class Movies {
+import movieModel from '../models/movie.js';
+import Answer from '../utils/answers/Answer.js';
+import CustomError from '../utils/errors/CustomError.js';
+
+class Movies {
   constructor(model, answer, error) {
     this.model = model;
     this.answer = answer;
@@ -13,39 +17,40 @@ export default class Movies {
     this.model.createMovie(movieData)
       .then((movie) => res.send(this.answer.movieAnswer(movie)))
       .catch((err) => {
-        console.log(err);
-        next(this.error.errorHandler(405, 'createMovie error'));
+        next(this.error.getCustomError(400, this.error.getFullErrMsg(err)));
       });
   }
 
   getMovies(req, res, next) {
     const owner = req.user._id;
     this.model.getAllUserMovies(owner)
-      .then((movies) => res.send(this.aswer.moviesAnswer(movies)))
+      .then((movies) => {
+        res.send(this.answer.moviesAnswer(movies));
+      })
       .catch((err) => {
-        console.log(err);
-        next(this.error.errorHandler(405, 'getMovies error'));
+        next(this.error.getCustomError(400, 'У пользователя отсутствуют фильмы'));
       });
   }
 
   deleteMovie(req, res, next) {
     const ownerId = req.user._id;
-    const movieId = req.params;
+    const { movieId } = req.params;
     this.model.getMovieById(movieId)
       .then((movie) => {
-        if (movie.owner === ownerId) {
+        if (movie.owner.toString() === ownerId) {
           this.model.deleteMovie(movieId)
             .then((deletedMovie) => res.send(this.answer.movieAnswer(deletedMovie)))
             .catch((err) => {
-              console.log(err);
-              next(this.error.errorHandler(405, 'deletedMovie error last'));
+              next(this.error.getCustomError(405, this.error.getFullErrMsg(err)));
             });
+        } else {
+          next(this.error.getCustomError(405, 'Нельзя удалять чужие фильмы'));
         }
-        next(this.error.errorHandler(405, 'Нельзя удалять чужие фильмы'));
       })
       .catch((err) => {
-        console.log(err);
-        next(this.error.errorHandler(405, 'deletedMovie error last'));
+        next(this.error.getCustomError(400, `В базе нет фильма с id: ${movieId}`));
       });
   }
 }
+
+export default new Movies(movieModel, new Answer(), new CustomError());
