# routes/index.js
@@ -1,12 +1,15 @@
 import express from 'express';
-import signing from './signing.js';
+import signinup from './signinup.js';
 import users from './users.js';
 import movies from './movies.js';
+import signout from './signout.js';
+import auth from '../middlewares/auth.js';
 
 const router = express.Router();
 
-router.use(signing);
-router.use('/users', users);
-router.use('/movies', movies);
+router.use('/', signinup);
+router.use('/', auth, signout);
+router.use('/users', auth, users);
+router.use('/movies', auth, movies);
 
 export default router;
