# routes/signinup.js
@@ -3,7 +3,7 @@ import users from '../controllers/Users.js';
 
 const router = express.Router();
 
-router.get('/me', users.getUser.bind(users));
-router.patch('/me', users.updateUser.bind(users));
+router.post('/signup', users.signup.bind(users));
+router.post('/signin', users.signin.bind(users));
 
 export default router;
