# routes/signout.js
@@ -3,7 +3,6 @@ import users from '../controllers/Users.js';
 
 const router = express.Router();
 
-router.get('/me', users.getUser.bind(users));
-router.patch('/me', users.updateUser.bind(users));
+router.post('/signout', users.signout.bind(users));
 
 export default router;
